--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-express-mongodb.api",
-  "version": "0.0.0",
+  "author": "Pablo Ibanez",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
