Project is an NPM module now

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "node-express-mongodb.api",
+  "name": "node-express-mongodb",
   "author": "Pablo Ibanez",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
+  "main": "./index.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.15.2",
-    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.1",
     "dotenv": "^4.0.0",
