--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
   "name": "node-express-mongodb",
   "author": "Pablo Ibanez",
-  "version": "1.0.0",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pabloibanezcom/node-express-mongodb"
+  },
+  "version": "1.0.1",
+  "keywords": ["express", "api", "REST", "mongodb", "mongoose"],
+  "private": false,
   "scripts": {
     "start": "node ./bin/www"
   },
   "main": "./index.js",
   "dependencies": {
+    "express": "4.16.2",
+    "mongoose": "4.13.0"
+  },
+  "devDependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.1",
-    "dotenv": "^4.0.0",
-    "express": "~4.14.0",
-    "express-session": "^1.15.0",
-    "mongoose": "^4.11.13",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
-    "passport-facebook-token": "^3.3.0",
-    "passport-local": "^1.0.0"
+    "body-parser": "1.18.2",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.4",
+    "dotenv": "4.0.0",
+    "express-session": "1.15.6",
+    "passport": "^0.4.0",
+    "passport-facebook": "2.1.1",
+    "passport-facebook-token": "3.3.0",
+    "passport-local": "1.0.0"
   },
   "engines": {
     "node": "7.7.0",
