README.md and package.json updated

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-express-mongodb",
   "author": "Pablo Ibanez",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/pabloibanezcom/node-express-mongodb"
