--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "node-express-mongodb",
   "author": "Pablo Ibanez",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/pabloibanezcom/node-express-mongodb"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "keywords": ["express", "api", "REST", "mongodb", "mongoose"],
   "private": false,
   "scripts": {
