--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/pabloibanezcom/node-express-mongodb"
   },
-  "version": "1.0.4",
+  "version": "1.0.5",
   "keywords": [
     "express",
     "api",
@@ -23,19 +23,19 @@
     "express": "4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "4.13.0",
-    "passport-jwt": "^3.0.1"
+    "passport-jwt": "^3.0.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "2.1.1",
+    "passport-facebook-token": "3.3.0",
+    "passport-local": "1.0.0",
+    "bcrypt-nodejs": "0.0.3"
   },
-  "devDependencies": {
-    "bcrypt-nodejs": "0.0.3",
+  "devDependencies": {  
     "body-parser": "1.18.2",
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
     "dotenv": "4.0.0",
     "express-session": "1.15.6",
-    "passport": "^0.4.0",
-    "passport-facebook": "2.1.1",
-    "passport-facebook-token": "3.3.0",
-    "passport-local": "1.0.0",
     "connect-flash": "^0.1.1"
   },
   "engines": {
