--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "express": "4.16.2",
+    "express-async-await": "^1.1.0",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "4.13.0",
     "passport": "^0.4.0",
