pagination feature added

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "4.16.2",
     "express-async-await": "^1.1.0",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "4.13.0",
+    "mongoose": "^5.0.8",
+    "mongoose-paginate": "^5.0.3",
     "passport": "^0.4.0",
     "passport-facebook": "2.1.1",
     "passport-facebook-token": "3.3.0",
