--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/pabloibanezcom/node-express-mongodb"
   },
-  "version": "1.0.23",
+  "version": "1.0.24",
   "keywords": [
     "express",
     "api",
@@ -21,6 +21,7 @@
   "main": "./index.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "chalk": "^2.4.1",
     "express": "4.16.2",
     "express-async-await": "^1.1.0",
     "jsonwebtoken": "^8.1.0",
